Primer div completo.

--- a/index.html
+++ b/index.html
@@ -50,20 +50,28 @@
               <a class="nav-link" href="#">Conviertete en orador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-verde-ticket">Comprar tickets</a>
+              <a class="nav-link text-verde-ticket" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Comprar tickets</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="container-fluid p-0 position-relative container-imagen clearfix">
+    <div class="container-fluid p-0 position-relative container-imagen text-white clearfix">
       <div class="imagen"></div>
       <!--<img src="img/ba1.jpg" alt="" class="img-fluid">-->
       <!--<img src="img/ba1.jpg" alt="" class="card-img-overlay">-->
-      <div class="position-absolute top-50 start-50 col-5 text-white">
-        <h1>Conf Bs As</h1>
-        <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+      <div class="row justify-content-end bsas-align position-absolute top-50 end-0 translate-middle-y">
+        <div class="col-sm-12 col-lg-6 text-end">
+          <h1>Conf Bs As</h1>
+          <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+          <div class="container p-1">
+            <button type="button" class="btn btn-outline-light btn-blanco-orador margin-bottom-boton">Quiero ser orador</button>
+            <a class="ms-1" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+              <button type="button" class="btn btn-verde-ticket">Comprar tickets</button>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
