Segundo div completo.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,46 @@
       </div>
     </div>
 
-    <div class="container bg-primary text-white p-5">
-      <h1>Esta es una caja con la clase container</h1>
-      <h1>Hola mundo de Bootstrap</h1>
-      <p>Diseñaremos sitios <em>reponsive</em> de forma ágil y sencilla</p>
+    <div class="container-fluid col-md-9 bg-white text-dark py-2">
+      <div class="text-center">
+        <p class="p-chico mb-0">CONOCE A LOS</p>
+        <h2>ORADORES</H2>
+      </div>
+      <div class="row">
+        <div class="col-md-4 pb-2 pb-md-0">
+          <div class="card w-100 p-0" style="width: 18rem;">
+            <img src="img/steve.jpg" class="card-img-top" alt="Steve Jobs sosteniendo un celular.">
+            <div class="card-body">
+              <a href="https://www.w3schools.com/js/" target="_blank" class="btn btn-warning p-chico fw-bold p-1 py-0">JavaScript</a>
+              <a href="https://www.w3schools.com/react/default.asp" target="_blank" class="btn btn-verde-react p-chico fw-bold p-1 py-0">React</a>
+              <h5 class="card-title">Steve Jobs</h5>
+              <p class="card-text p-chico">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deleniti hic autem quaerat exercitationem excepturi. Soluta, id dolorum necessitatibus harum quia blanditiis illo! Eveniet iusto quam rerum deserunt! Recusandae, asperiores?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 pb-2 pb-md-0">
+          <div class="card w-100 p-0" style="width: 18rem;">
+            <img src="img/bill.jpg" class="card-img-top" alt="Bill Gates hablando.">
+            <div class="card-body">
+              <a href="https://www.w3schools.com/js/" target="_blank" class="btn btn-warning p-chico fw-bold p-1 py-0">JavaScript</a>
+              <a href="https://www.w3schools.com/react/default.asp" target="_blank" class="btn btn-verde-react p-chico fw-bold p-1 py-0">React</a>
+              <h5 class="card-title">Bill Gates</h5>
+              <p class="card-text p-chico">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deleniti hic autem quaerat exercitationem excepturi. Soluta, id dolorum necessitatibus harum quia blanditiis illo! Eveniet iusto quam rerum deserunt! Recusandae, asperiores?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card w-100 p-0" style="width: 18rem;">
+            <img src="img/ada.jpeg" class="card-img-top" alt="Steve Jobs sosteniendo un celular.">
+            <div class="card-body">
+              <a href="https://www.w3schools.com/js/" target="_blank" class="btn btn-secondary p-chico fw-bold p-1 py-0">Negocios</a>
+              <a href="https://www.w3schools.com/react/default.asp" target="_blank" class="btn btn-danger p-chico fw-bold p-1 py-0">Startups</a>
+              <h5 class="card-title">Ada Lovelace</h5>
+              <p class="card-text p-chico">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci deleniti hic autem quaerat exercitationem excepturi. Soluta, id dolorum necessitatibus harum quia blanditiis illo! Eveniet iusto quam rerum deserunt! Recusandae, asperiores?</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="container mt-4">
