--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script>
+      $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
     <title>Conf Bs As</title>
   </head>
   <body>
@@ -75,7 +80,7 @@
       </div>
     </div>
 
-    <div class="container-fluid col-md-9 bg-white text-dark py-2">
+    <div class="container-fluid col-md-9 bg-white text-dark pt-3 pb-2">
       <div class="text-center">
         <p class="p-chico mb-0">CONOCE A LOS</p>
         <h2>ORADORES</H2>
@@ -134,6 +139,31 @@
           <a href="#" class="btn btn-outline-light btn-transparente">Conocé más</a>
         </div>
       </div>
+    </div>
+
+    <div class="container-fluid bg-primary pt-4 col-6">
+      <div class="text-center">
+        <p class="p-chico mb-0">CONVIÉRTETE EN UN</p>
+        <h2>ORADOR</h2>
+        <form action="#">
+          <legend>Anótate como orador para dar una <span href="#" data-toggle="tooltip" title="Presentación de 5 minutos con 20 diapositivas." class="tool">charla ignite</span>. Cuéntanos de qué quieres hablar!</legend>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      
     </div>
 
     <script
