--- a/index.html
+++ b/index.html
@@ -145,24 +145,52 @@
       <div class="text-center">
         <p class="p-chico mb-0">CONVIÉRTETE EN UN</p>
         <h2>ORADOR</h2>
-        <form action="#">
+        <form action="#" method="post">
           <legend>Anótate como orador para dar una <span href="#" data-toggle="tooltip" title="Presentación de 5 minutos con 20 diapositivas." class="tool">charla ignite</span>. Cuéntanos de qué quieres hablar!</legend>
           <div class="mb-3">
             <div class="row gx-4 mb-3">
               <div class="col-md-6 mb-3 mb-md-0">
-                <input type="text" class="form-control form-control-sm" id="form-name" name="form-name" placeholder="Nombre" />
+                <input type="text" class="form-control form-control-sm" id="form-name" name="form-name" placeholder="Nombre" required />
               </div>
               <div class="col-md-6">
-                <input type="text" class="form-control form-control-sm" id="form-surname" name="form-surname" placeholder="Apellido" />
+                <input type="text" class="form-control form-control-sm" id="form-surname" name="form-surname" placeholder="Apellido" required />
               </div>
             </div>
-            <textarea class="form-control form-control-lg" id="form-text" aria-describedby="textHelp" placeholder="Sobre qué quieres hablar?"></textarea>
+            <textarea class="form-control form-control-lg" id="form-text" aria-describedby="textHelp" placeholder="Sobre qué quieres hablar?" required></textarea>
             <div id="textHelp" class="form-text text-start p-chico">Recuerda incluir un título para tu charla</div>
           </div>
-          <button type="submit" class="btn btn-verde-enviar col-12">Enviar</button>
+          <button type="submit" class="btn btn-verde-enviar col-12" value="Enviar">Enviar</button>
         </form>
       </div>
     </div>
+
+    <footer class="container-fluid bg-azul text-center">
+      <div class="container col-lg-10 p-4">
+        <div class="container-fluid row g-3 align-items-center">
+          <div class="col">
+            <a href="#">Preguntas frecuentes</a>
+          </div>
+          <div class="col">
+            <a href="#">Contáctanos</a>
+          </div>
+          <div class="col">
+            <a href="#">Prensa</a>
+          </div>
+          <div class="col">
+            <a href="#">Conferencias</a>
+          </div>
+          <div class="col">
+            <a href="#">Términos y condiciones</a>
+          </div>
+          <div class="col">
+            <a href="#">Privacidad</a>
+          </div>
+          <div class="col">
+            <a href="#">Estudiantes</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
