--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+              <a class="nav-link active" aria-current="page" href="#conferencia">La conferencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Los oradores</a>
+              <a class="nav-link" href="#oradores">Los oradores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">El lugar y la fecha</a>
+              <a class="nav-link" href="#lugar-fecha">El lugar y la fecha</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Conviertete en orador</a>
+              <a class="nav-link" href="#form-orador">Conviertete en orador</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-verde-ticket" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Comprar tickets</a>
@@ -62,7 +62,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid p-0 position-relative text-white clearfix" id="container-imagen-1">
+    <div class="container-fluid p-0 position-relative text-white clearfix" id="conferencia">
       <div id="imagen-1"></div>
       <!--<img src="img/ba1.jpg" alt="" class="img-fluid">-->
       <!--<img src="img/ba1.jpg" alt="" class="card-img-overlay">-->
@@ -71,7 +71,9 @@
           <h1>Conf Bs As</h1>
           <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
           <div class="container p-1">
-            <button type="button" class="btn btn-outline-light btn-transparente margin-bottom-boton">Quiero ser orador</button>
+            <a href="#form-orador">
+              <button type="button" class="btn btn-outline-light btn-transparente margin-bottom-boton">Quiero ser orador</button>
+            </a>
             <a class="ms-1" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
               <button type="button" class="btn btn-verde-ticket">Comprar tickets</button>
             </a>
@@ -80,7 +82,7 @@
       </div>
     </div>
 
-    <div class="container-fluid col-md-9 bg-white text-dark pt-3 pb-2">
+    <div class="container-fluid col-md-9 bg-white text-dark pt-3 pb-2" id="oradores">
       <div class="text-center">
         <p class="p-chico mb-0">CONOCE A LOS</p>
         <h2>ORADORES</H2>
@@ -128,7 +130,7 @@
       </div>
     </div>
 
-    <div class="container-fluid mt-4">
+    <div class="container-fluid mt-4" id="lugar-fecha">
       <div class="row">
         <div class="col-12 col-lg-6 p-0 border border-light-subtle border-start-0" id="container-imagen-3">
           <img src="img/honolulu.jpg" alt="Playa en Honolulu." width="100%">
@@ -141,7 +143,7 @@
       </div>
     </div>
 
-    <div class="container-fluid pt-4 col-md-9 col-lg-6 pb-3">
+    <div class="container-fluid pt-4 col-md-9 col-lg-6 pb-3" id="form-orador">
       <div class="text-center">
         <p class="p-chico mb-0">CONVIÉRTETE EN UN</p>
         <h2>ORADOR</h2>
@@ -168,7 +170,7 @@
       <div class="container col-lg-10 p-4">
         <div class="container-fluid row g-3 align-items-center">
           <div class="col">
-            <a href="#">Preguntas frecuentes</a>
+            <a href="https://www.google.com" target="_blank">Preguntas frecuentes</a>
           </div>
           <div class="col">
             <a href="#">Contáctanos</a>
@@ -186,7 +188,7 @@
             <a href="#">Privacidad</a>
           </div>
           <div class="col">
-            <a href="#">Estudiantes</a>
+            <a href="https://aulasvirtuales.bue.edu.ar" target="_blank">Estudiantes</a>
           </div>
         </div>
       </div>
