role button agregado.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="col-12 col-lg-6 p-3 bg-gris text-white border border-light-subtle border-start-0 border-end-0">
           <h2>Bs As - Octubre</h2>
           <p>Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidadada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de superficie).</p>
-          <a href="#" class="btn btn-outline-light btn-transparente">Conocé más</a>
+          <a href="#" role="button" class="btn btn-outline-light btn-transparente">Conocé más</a>
         </div>
       </div>
     </div>
