scroll-margin-top agregado, primer div arreglado.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!--<img src="img/ba1.jpg" alt="" class="img-fluid">-->
       <!--<img src="img/ba1.jpg" alt="" class="card-img-overlay">-->
       <div class="row justify-content-end bsas-align position-absolute top-50 end-0 translate-middle-y">
-        <div class="col-sm-12 col-lg-6 text-end">
+        <div class="col-sm-12 col-md-8 col-lg-5 text-end">
           <h1>Conf Bs As</h1>
           <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
           <div class="container p-1">
