--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#conferencia">La conferencia</a>
+              <a class="nav-link active" aria-current="page" href="index.html#conferencia">La conferencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#oradores">Los oradores</a>
+              <a class="nav-link" href="index.html#oradores">Los oradores</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#lugar-fecha">El lugar y la fecha</a>
+              <a class="nav-link" href="index.html#lugar-fecha">El lugar y la fecha</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#form-orador">Conviertete en orador</a>
+              <a class="nav-link" href="index.html#form-orador">Conviertete en orador</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-verde-ticket" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Comprar tickets</a>
+              <a class="nav-link text-verde-ticket" href="compra.html">Comprar tickets</a>
             </li>
           </ul>
         </div>
@@ -74,7 +74,7 @@
             <a href="#form-orador">
               <button type="button" class="btn btn-outline-light btn-transparente margin-bottom-boton">Quiero ser orador</button>
             </a>
-            <a class="ms-1" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+            <a class="ms-1" href="compra.html">
               <button type="button" class="btn btn-verde-ticket">Comprar tickets</button>
             </a>
           </div>
