Botón Reset arreglado.

--- a/compra.html
+++ b/compra.html
@@ -127,7 +127,7 @@
 
           <div class="row gx-2">
             <div class="col-md-6 mb-3 mb-md-0">
-              <button type="reset" class="btn btn-verde-enviar col-12 texto-chico" value="Borrar">Borrar</button>
+              <button type="reset" id="borrar" class="btn btn-verde-enviar col-12 texto-chico" value="Borrar">Borrar</button>
             </div>
             <div class="col-md-6">
               <button type="submit" class="btn btn-verde-enviar col-12 texto-chico" value="Enviar">Resumen</button>
