Links de Conferencia arreglados.

--- a/index.html
+++ b/index.html
@@ -71,12 +71,8 @@
           <h1>Conf Bs As</h1>
           <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
           <div class="container p-1">
-            <a href="#form-orador">
-              <button type="button" class="btn btn-outline-light btn-transparente margin-bottom-boton">Quiero ser orador</button>
-            </a>
-            <a class="ms-1" href="compra.html">
-              <button type="button" class="btn btn-verde-ticket">Comprar tickets</button>
-            </a>
+            <a href="#form-orador" class="btn btn-outline-light btn-transparente margin-bottom-boton">Quiero ser orador</a>
+            <a class="ms-1 btn btn-verde-ticket" href="compra.html">Comprar tickets</a>
           </div>
         </div>
       </div>
