Categoría Ninguna agregada.

--- a/compra.html
+++ b/compra.html
@@ -113,7 +113,8 @@
               <div class="col-md-6 text-start">
                 <label for="form-category" class="mb-2 texto-chico">Categoría</label>
                 <select type="text" class="form-select form-select-sm" id="form-category" name="form-category" required>
-                  <option value="estudiante" selected>Estudiante</option>
+                  <option value="ninguna" selected>Ninguna</option>
+                  <option value="estudiante">Estudiante</option>
                   <option value="trainee">Trainee</option>
                   <option value="junior">Junior</option>
                 </select>
