Validación en campo de Cantidad agregado.

--- a/compra.html
+++ b/compra.html
@@ -108,7 +108,7 @@
             <div class="row gx-2 mb-4">
               <div class="col-md-6 mb-3 mb-md-0 text-start">
                 <label for="form-quantity" class="mb-2 texto-chico">Cantidad</label>
-                <input type="number" class="form-control form-control-sm" id="form-quantity" name="form-quantity" min="1" max="10" placeholder="cantidad" required />
+                <input type="text" class="form-control form-control-sm" id="form-quantity" name="form-quantity" placeholder="cantidad" required />
               </div>
               <div class="col-md-6 text-start">
                 <label for="form-category" class="mb-2 texto-chico">Categoría</label>
